# hallswap-contract

./: .gitignore  Cargo.toml  README.md  build.sh  rustfmt.toml
contracts/hallswap/: Cargo.toml
contracts/hallswap/src/: contract.rs  error.rs  msg.rs  state.rs
tests/: README.md  bun.lockb  package.json  script.sh
tests/src/: assert.ts  index.ts  wallet.ts
tests/src/models/: Asset.ts  AssetInfo.ts  MsgInstantiateContract.ts  MsgStoreCode.ts
